# Kea

./: FileParser.sln
AppliedAI/: DatasætOpgave.ipynb  InClassTask.ipynb  Notebook.ipynb  Tasks.ipynb  pyproject.toml
AppliedAI/.ipynb_checkpoints/: DatasætOpgave-checkpoint.ipynb  Tasks-checkpoint.ipynb  pyproject-checkpoint.toml
AppliedAI/01._Lecture_7_8/: California Houseing Prices.py  Danish Houseing Prices.py  pyproject.toml
AppliedAI/10._Lection/: Predict XOR by Regressor & Classifier.py  pyproject.toml
SystemIntegration/Assignments/: package-lock.json  package.json
SystemIntegration/Assignments/01a/FileParser/: EncodeDecodeString.cs  FileReader.cs  Pokemon.cs  PokemonWrapper.cs  Program.cs
SystemIntegration/Assignments/01a/Files/: Pokemon.Json  Pokemon.csv  Pokemon.txt  Pokemon.xml  Pokemon.yml
SystemIntegration/Assignments/01a/NodeFileParser/: ModuleParser.js  Parser.js  Pokemon.js  index.js  package-lock.json  package.json
SystemIntegration/Assignments/03a/C#Server/MyWebApi/: MyWebApi.csproj  MyWebApi.http  Program.cs
SystemIntegration/Assignments/03a/C#Server/MyWebApi/Properties/: launchSettings.json
SystemIntegration/Assignments/03a/NodeServer/: app.js  package-lock.json  package.json
SystemIntegration/Assignments/04a/: app.js
SystemIntegration/Assignments/04a/public/: index.html
SystemIntegration/Assignments/06a/: client.js  package-lock.json  package.json  server.js
