[project]
name = "01-lecture-7_8"
version = "0.1.0"
description = ""
authors = [
    {name = "Rex77pro",email = "smaurieka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "marimo (>=0.11.17,<0.12.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "01"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
