[project]
name = "10-lection"
version = "0.1.0"
description = ""
authors = [
    {name = "Rex77pro",email = "smaurieka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "marimo (>=0.11.12,<0.12.0)"
]

[tool.poetry]
packages = [{include = "10"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
